# steambandRedux

./: CMakeLists.txt  README.md  readme.txt
agent-os/: config.yml
agent-os/product/: 1-product-concept.md  mission.md  roadmap.md  tech-stack.md
agent-os/specs/2025-12-11-complete-cmake-build-system-migration/: spec.md  tasks.md
agent-os/specs/2025-12-11-complete-cmake-build-system-migration/implementation/: build-verification-summary.md
agent-os/specs/2025-12-11-complete-cmake-build-system-migration/planning/: 0-raw-idea.md  requirements.md
agent-os/specs/2025-12-11-complete-cmake-build-system-migration/verifications/: final-verification.md
agent-os/specs/2025-12-12-implement-comprehensive-logging-system/: spec.md  tasks.md
agent-os/specs/2025-12-12-implement-comprehensive-logging-system/planning/: 0-raw-idea.md  requirements.md
agent-os/specs/2025-12-12-implement-comprehensive-logging-system/verifications/: final-verification.md
agent-os/specs/2025-12-12-set-up-unit-testing-framework/: spec.md  tasks.md
agent-os/specs/2025-12-12-set-up-unit-testing-framework/documentation/: testing-guide.md
agent-os/specs/2025-12-12-set-up-unit-testing-framework/planning/: 0-raw-idea.md  requirements.md
agent-os/specs/2025-12-13-implement-controller-input-mapping/: spec.md  tasks.md
agent-os/specs/2025-12-13-implement-controller-input-mapping/planning/: 0-raw-idea.md  requirements.md
agent-os/specs/2025-12-13-integrate-xinput-api/: spec.md  tasks.md
agent-os/specs/2025-12-13-integrate-xinput-api/planning/: 0-raw-idea.md  requirements.md
agent-os/specs/2025-12-13-integrate-xinput-api/verifications/: final-verification.md
lib/apex/: scores.raw
lib/bone/: Makefile.am  Makefile.in
lib/data/: artifact.raw  cost_adj.raw  ego_item.raw  limits.raw  monster.raw  object.raw  p_class.raw  p_hist.raw  p_race.raw  shop_own.raw  terrain.raw  vault.raw
lib/file/: Makefile.am  Makefile.in  book-0.txt  book-2.txt  book-3.txt  book-4.txt  book-5.txt  news.txt
lib/info/: Makefile.in
lib/save/: Bryan
src/: Makefile.bcc  Makefile.cyg  Makefile.gtk  Makefile.lsl  Makefile.std  cmd-attk.c  controller.c  controller.h  controller_config_menu.c  controller_config_menu.h  controller_menu.c  controller_menu.h  init2.c  logging.c  logging.h  main-crb.c  main-mac.c  main-win.c  readdib.h  steam_integration.c  steam_integration.h
src/tests/: main_test.c  test_controller.c  test_controller.h  test_controller_stubs.c  test_framework.h  test_helpers.h  test_logging.c  test_logging_unity.c  test_unity_infrastructure.c  test_util.c  test_z_util.c  unity_integration.c  unity_test_runner.c
